resources/css/index.css
:root {
	--c-black: rgb(0, 0, 0);
	--c-bg-overlay: rgb(255, 255, 255);
	--c-white: rgb(255, 255, 255);
	--c-light: rgb(212, 212, 212);
	--c-grey: rgb(126, 126, 126);
	--c-bg: rgb(229, 229, 229);
	--c-text: rgb(34, 34, 34);
	--c-bold: rgb(0, 0, 0);
	--c-code: rgb(255, 33, 133);
	--c-code-darker: rgb(227, 0, 102);
	--c-shadow: rgb(198, 198, 198);
}

.nav-logo {
	margin-top:0.95rem;
	content:url('/resources/images/sparker_black.png');
}

/* dark mode */
@media (prefers-color-scheme: dark) {
	:root {
		--c-black: rgb(0, 0, 0);
		--c-bg-overlay: rgb(44, 46, 51);
		--c-light: rgb(66, 66, 66);
		--c-grey: rgb(109, 111, 119);
		--c-bg: rgb(20, 20, 20);
		--c-text: rgb(228, 228, 228);
		--c-bold: rgb(255, 255, 255);
		--c-shadow: rgb(0, 0, 0);

		--c-code: hsl(206, 100%, 56%);
		--c-code-darker: hsl(206, 100%, 45%);
	}

	a {
		color: rgb(113, 208, 255);
	}

	.nav-logo {
		margin-top:0.4rem;
		content:url('/resources/images/spark_white.png');
	}
}

.shadow {
	box-shadow: 0rem 0rem 0.5rem var(--c-shadow);
}

.hide-focus:focus {
	outline: none;
}

.hovered {
	background-color: var(--c-bg);
}

.hoverable:hover {
	background-color: var(--c-bg);
}

.hoverable-bg-code {
	color:var(--c-white);
	background-color: var(--c-code-darker);
}
.hoverable-bg-code:hover {
	background-color: var(--c-code);
}

.hoverable-bg-overlay:hover {
	color:var(--c-text);
	background-color: var(--c-bg-overlay);
}

.c-bold {
	color: var(--c-bold);
}

.c-grey {
	color: var(--c-grey);
}

.c-code {
	color: var(--c-code)
}

.bd {
	border-radius: 0.5rem;
}

.bd-none {
	border: none;
}

.pad-right-05rem {
	padding-right:0.5rem;
}

.pad-05 {
	padding: 0.5rem;
}

.mar-05 {
	margin:0.5rem;
}

.pad-05-righty {
	padding-top: 0.5rem;
	padding-right: 0.5rem;
	padding-bottom: 0.5rem;
}

.pad-05-lefty {
	padding-top: 0.5rem;
	padding-left: 0.5rem;
	padding-bottom: 0.5rem;
}

.pad-sides-05rem {
	padding-right: 0.5rem;
	padding-left: 0.5rem;
}

.pad-sides-5 {
	padding-right: 5%;
	padding-left: 5%;
}

.mar-top-2rem {
	margin-top:2rem;
}

.mar-sides-2 {
	margin-right: 2%;
	margin-left: 2%;
}

.mar-sides-5 {
	margin-right: 5%;
	margin-left: 5%;
}

.pad-sides-2 {
	padding-right: 2%;
	padding-left: 2%;
}

.pad-top-2rem {
	padding-top: 2rem;
}

.pad-top-5rem {
	padding-top: 5rem;
}

.pad-bot-2rem {
	padding-bottom: 2rem;
}

.pad-bot-5rem {
	padding-bottom: 5rem;
}

.thin-grey-right {
	border-right: 0.08rem solid var(--c-grey);
}

.thin-light {
	border: 0.08rem solid var(--c-light);
}

.thin-bot {
	border-bottom: 0.08rem solid var(--c-light);
}

.thin-bot-grey {
	border-bottom: 0.08rem solid var(--c-grey);
}

.thin-top {
	border-top: 0.08rem solid var(--c-light);
}

.thin-top-grey {
	border-top: 0.08rem solid var(--c-grey);
}

.thin-grey {
	border: 0.08rem solid var(--c-grey);
}

.bg-overlay {
	color:var(--c-text);
	background-color: var(--c-bg-overlay);
}

.bg {
	background-color: var(--c-bg);
	color: var(--c-text);
}

.bg-grey {
	background-color: var(--c-grey);
}

.bg-code {
	color: white;
	background-color: var(--c-code);
}

.nav {
	margin: 0;
	list-style: none;
}

.nav-row {
	display: flex;
	flex-direction: row;
}

.nav li {
	margin-top: 0.7rem;
	margin-bottom: 0.6rem;
}

.nav a {
	display:block;
	padding: 0.5rem;
	border-radius: 1.5rem;
	text-decoration: none;
	color: var(--c-text);
	font-weight: 600;
}

.nav-search-bar {
	display: none;
}


.nav-search-hidden-stick-right {
	margin-left:auto;
}

/* when width larger than 520px */
@media only screen and (min-width: 520px){
	.nav-search-bar {
		display: block;
	}
}

.nav-search-bar-signup {
	display: none;
}

/* when width larger than 600px */
@media only screen and (min-width: 600px){
	.nav-search-bar-signup {
		display: block;
	}
}

/* forms */
.form {
	padding: 2rem;
	border: 0.08rem solid var(--c-light);
	border-radius: 0.5rem;
}

.form input, .form button {
	margin-top: 0.5rem;
	width: 100%;
}

.form-input {
	border: 0.08rem solid var(--c-light);
	padding: 0.5rem;
}

.form-btn {
	border: 0.08rem solid var(--c-light);
	padding: 0.5rem;
}

.form-btn:hover {
	background-color: var(--c-grey);
}

.text-center {
	text-align: center;
}

/* CUSTOM CSS SELECT https://moderncss.dev/custom-select-styles-with-pure-css/ */

